Bug fix for non-fuzzy operations not showing parmaters in the popup.

--- a/eems_online_app/static/css/base.css
+++ b/eems_online_app/static/css/base.css
@@ -776,7 +776,8 @@ ul.buttons li.selected a:hover
 	padding: 3px;
 	width: 650px;
 	margin-top: 40px;
-	z-index: 9999
+	z-index: 9999;
+	word-break:break-all;
 }
 
 .histogram_div {
